[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/New Piskel.png" type="Texture" id=1]
[ext_resource path="res://scripts/game_node2d.gd" type="Script" id=2]
[ext_resource path="res://sprites/PlayerRight.png" type="Texture" id=3]
[ext_resource path="res://sprites/PlayerLeft.png" type="Texture" id=4]
[ext_resource path="res://fonts/PrStart.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 5 )

[node name="GameNode2D" type="Node2D"]
position = Vector2( -3, 4 )
script = ExtResource( 2 )

[node name="BallSprite" type="Sprite" parent="."]
position = Vector2( 8, -3 )
texture = ExtResource( 1 )

[node name="PlayerLeftSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 35, 300 )
texture = ExtResource( 3 )

[node name="PlayerRightSprite" type="Sprite" parent="."]
position = Vector2( 775, 300 )
texture = ExtResource( 4 )

[node name="HUDNode" type="Node" parent="."]

[node name="PlayerLeftGoalLabel" type="Label" parent="HUDNode"]
margin_left = 326.0
margin_top = 19.0
margin_right = 366.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 1 )
text = "0
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XLabel" type="Label" parent="HUDNode"]
margin_left = 379.0
margin_top = 19.0
margin_right = 419.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerRightGoalLabel" type="Label" parent="HUDNode"]
margin_left = 420.0
margin_top = 19.0
margin_right = 460.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
